force-app/main/default/objects/PaymentMethod__c/fields/BankAccountNo__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNo__c</fullName>
    <label>Bank Account No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>