force-app/main/default/objects/PaymentMethod__c/fields/BankBranch__c.field-meta.xml
<CustomField>
    <fullName>BankBranch__c</fullName>
    <inlineHelpText>For International Transfers, you can specify the branch as &apos;CREDIT ADVICE&apos;.</inlineHelpText>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>