force-app/main/default/objects/PaymentMethod__c/fields/BankDraftNo__c.field-meta.xml
<CustomField>
    <fullName>BankDraftNo__c</fullName>
    <label>Bank Draft No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>