force-app/main/default/objects/PaymentMethod__c/fields/ChequeNo__c.field-meta.xml
<CustomField>
    <fullName>ChequeNo__c</fullName>
    <label>Cheque No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>