force-app/main/default/objects/PaymentMethod__c/fields/CompanyBank__c.field-meta.xml
<CustomField>
    <fullName>CompanyBank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>