force-app/main/default/objects/PaymentMethod__c/fields/CreditCardNo__c.field-meta.xml
<CustomField>
    <fullName>CreditCardNo__c</fullName>
    <label>Credit Card No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>