force-app/main/default/objects/PaymentMethod__c/fields/DebitCardNo__c.field-meta.xml
<CustomField>
    <fullName>DebitCardNo__c</fullName>
    <label>Debit Card No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>