force-app/main/default/objects/PaymentMethod__c/fields/InternationalBankName__c.field-meta.xml
<CustomField>
    <fullName>InternationalBankName__c</fullName>
    <label>International Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>