force-app/main/default/objects/PaymentMethod__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>PaymentReceipt__r.Opportunity__c</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>