force-app/main/default/objects/PaymentMethod__c/fields/PayInNumber__c.field-meta.xml
<CustomField>
    <fullName>PayInNumber__c</fullName>
    <label>Pay-In Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>