force-app/main/default/objects/PaymentMethod__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentMethod</valueSetName>
    </valueSet>
</CustomField>