force-app/main/default/objects/PaymentMethod__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <label>Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProviderName</valueSetName>
    </valueSet>
</CustomField>