force-app/main/default/objects/PaymentMethod__c/fields/Reference1__c.field-meta.xml
<CustomField>
    <fullName>Reference1__c</fullName>
    <label>Reference 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>