force-app/main/default/objects/PaymentMethod__c/fields/TotalReceiveAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalReceiveAmount__c</fullName>
    <label>Total Receive Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>