force-app/main/default/objects/PaymentMethod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BankName__c</columns>
    <columns>PaymentType__c</columns>
    <columns>ProviderName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>